# niya

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  coding-agent-requirements-spec.md  release-plz.toml
.github/workflows/: ci.yml  release-pr.yml  release.yml  semantic-pr-title.yml
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: commands.rs  main.rs  renderer.rs  repl.rs
crates/nexus-config/: Cargo.toml
crates/nexus-config/src/: lib.rs  loader.rs  schema.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: context.rs  lib.rs  orchestrator.rs  permission.rs  provider.rs  session.rs  tool.rs  types.rs
crates/nexus-providers/: Cargo.toml
crates/nexus-providers/src/: lib.rs  openai_compat.rs
crates/nexus-tools/: Cargo.toml
crates/nexus-tools/src/: file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep_tool.rs  lib.rs  shell.rs
crates/niya/: CHANGELOG.md  Cargo.toml
crates/niya-cli/: Cargo.toml
crates/niya-cli/src/: renderer.rs  repl.rs
crates/niya-config/: CHANGELOG.md  Cargo.toml
crates/niya-config/src/: lib.rs  loader.rs  merge.rs  schema.rs
crates/niya-core/: CHANGELOG.md  Cargo.toml
crates/niya-core/src/: context.rs  lib.rs  orchestrator.rs  permission.rs  provider.rs  types.rs
crates/niya-providers/: CHANGELOG.md  Cargo.toml
crates/niya-providers/src/: lib.rs  openai_compat.rs
crates/niya-tools/: CHANGELOG.md  Cargo.toml
crates/niya-tools/src/: file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep_tool.rs  lib.rs  path_safety.rs  shell.rs
crates/niya/src/: main.rs
design/: 00-architecture-overview.md  01-cli-interface.md  02-agent-orchestrator.md  03-provider-abstraction.md  04-tool-layer.md  05-permission-model.md  06-context-manager.md  07-configuration.md
design/decisions/: 01-tech-stack.md
