[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-core = { workspace = true }
nexus-config = { workspace = true }
nexus-providers = { workspace = true }
nexus-tools = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
