[package]
name = "niya-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration loading, schema, and merge logic for Niya"
keywords = ["configuration", "agent", "cli"]
categories = ["config", "development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
