[package]
name = "niya-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
niya-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
