[package]
name = "niya"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI coding agent powered by the Niya workspace"
keywords = ["agent", "cli", "llm", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "niya"
path = "src/main.rs"

[dependencies]
niya-core = { workspace = true }
niya-config = { workspace = true }
niya-providers = { workspace = true }
niya-tools = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
